--- a/css/admin_service_bodies.css
+++ b/css/admin_service_bodies.css
@@ -32,7 +32,7 @@ table td {
   padding-top: 5px;
 }
 
-.bw_info_text {
+.bmltwf_info_text {
   padding-left: 15px;
   background: #fff;
   border-left: 5px solid lightblue;
@@ -51,7 +51,7 @@ input {
     float: left;
 }
 
-.bw-center-checkbox {
+.bmltwf-center-checkbox {
     text-align: center; 
     vertical-align: middle;
 }
@@ -78,7 +78,7 @@ input {
   grid-area: 1 / 1 / 2 / 2;
 }
 
-hr.bw-error-message 
+hr.bmltwf-error-message 
 {
   border: none;
 }
