--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -258,11 +258,11 @@ div#meeting_content.form-grid .inline label {
   width: 70%;
 }
 
-div#meeting_content .bmltwf-changed.bmltwf-changed {
+div#meeting_content .bmltwf-changed.bmltwf-changed.bmltwf-changed {
   background: #e7f478;
 }
 
-div#meeting_content span.select2-selection--multiple.bmltwf-changed {
+div#meeting_content span.select2-selection--multiple.bmltwf-changed.bmltwf-changed {
   background: #e7f478;
 }
 
