--- a/templates/default_fso_email_template.html
+++ b/templates/default_fso_email_template.html
@@ -19,12 +19,8 @@ Please send a starter kit to the following meeting:
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:meeting_name}</td>
         </tr>
         <tr>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Requester First Name</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:first_name}</td>
-        </tr>
-        <tr>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Requester Last Name</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:last_name}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Submitter Name</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:submitter_name}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Starter Kit Postal Address</td>
