--- a/templates/default_fso_email_template.html
+++ b/templates/default_fso_email_template.html
@@ -23,6 +23,10 @@ Please send a starter kit to the following meeting:
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:submitter_name}</td>
         </tr>
         <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Contact Number</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:contact_number}</td>
+        </tr>
+        <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Starter Kit Postal Address</td>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:starter_kit_postal_address}
             </td>
